Mise à jour de index.html et ads.txt

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="description" content="SABI FINANCES : Optimisez vos finances personnelles en France avec nos outils intelligents de budget, prêt, épargne et comparaison bancaire. Découvrez des guides, vidéos et conseils professionnels pour 2025.">
     <meta name="keywords" content="finance personnelle, budget, prêt immobilier, comparateur banques, épargne, assurance, France, 2025, investissement">
     <meta name="author" content="SABI FINANCES">
+    
     <!-- Schema.org Structured Data -->
     <script type="application/ld+json">
     {
@@ -14,12 +15,12 @@
       "@type": "FinancialService",
       "name": "SABI FINANCES",
       "description": "Outils intelligents et conseils professionnels pour la gestion financière en France.",
-      "url": "https://www.sabifinances.fr",
-      "logo": "https://www.sabifinances.fr/logo.png",
+      "url": "https://sabi-finance.vercel.app/",
+      "logo": "https://sabi-finance.vercel.app/logo.png",
       "areaServed": "FR",
       "contactPoint": {
         "@type": "ContactPoint",
-        "email": "contact@sabifinances.fr",
+        "email": "jasonbateke@gmail.com",
         "contactType": "customer support"
       }
     }
@@ -31,10 +32,11 @@
     <!-- Chart.js -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/3.9.1/chart.min.js"></script>
     <!-- Google Ads -->
-    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6283676375456847" crossorigin="anonymous"></script>
-    <meta name="google-adsense-account" content="ca-pub-6283676375456847">
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7165340411035850" crossorigin="anonymous"></script>
+    <meta name="google-adsense-account" content="ca-pub-7165340411035850">
     <!-- Ads.txt -->
-    <meta name="ads-txt-verification" content="google.com, pub-6283676375456847, DIRECT, f08c47fec0942fa0">
+    <meta name="ads-txt-verification" content="google.com, pub-7165340411035850, DIRECT, f08c47fec0942fa0">
+    
     <style>
         * {
             margin: 0;
@@ -902,6 +904,44 @@
                     </div>
                 </div>
             </section>
+
+            <!-- Ad Space -->
+    <div class="ad-space">
+        <h3>Espace Publicitaire Google Ads</h3>
+        <p>Zone dédiée aux annonces sponsorisées</p>
+        <p>Format : 728x90 (Leaderboard)</p>
+
+        <!-- Script Google AdSense -->
+        <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7165340411035850"
+            crossorigin="anonymous"></script>
+        <!-- Bloc d'annonce 728x90 -->
+        <ins class="adsbygoogle"
+            style="display:inline-block;width:728px;height:90px"
+            data-ad-client="ca-pub-7165340411035850"
+            data-ad-slot="9368685528"></ins>
+        <script>
+            (adsbygoogle = window.adsbygoogle || []).push({});
+        </script>
+    </div>
+     <!-- Video Background Section -->
+    <section class="section" style="position: relative; overflow: hidden;">
+        <div style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; background: linear-gradient(45deg, rgba(0, 212, 255, 0.1), rgba(255, 0, 150, 0.1)); z-index: 1;"></div>
+        <div style="position: relative; z-index: 2; text-align: center;">
+            <h2>Vidéo de Présentation</h2>
+            <div style="max-width: 800px; margin: 0 auto; border-radius: 20px; overflow: hidden; box-shadow: 0 20px 40px rgba(0, 0, 0, 0.3);">
+                <a href="https://www.youtube.com/watch?v=p8kCl22EPp4=52s" target="_blank" style="text-decoration: none; color: inherit;">
+                    <div style="background: #000; aspect-ratio: 16/9; display: flex; align-items: center; justify-content: center; position: relative; cursor: pointer;">
+                        <div style="text-align: center;">
+                            <div style="font-size: 4rem; color: #00d4ff; margin-bottom: 1rem;">▶️</div>
+                            <h3>Découvrez Nos méthodes</h3>
+                            <p style="color: #cccccc;">Cliquez pour voir une démonstration de Nos projets</p>
+                        </div>
+                    </div>
+                </a>
+            </div>
+        </div>
+    </section>
+
             <!-- Tips Section -->
             <section id="tips" class="section hidden" aria-labelledby="tips-title">
                 <div class="tips-section">
@@ -1033,11 +1073,11 @@
             </div>
             <footer role="contentinfo">
                 <p>© 2025 SABI FINANCES. Tous droits réservés. | <a href="#">Politique de confidentialité</a> | <a href="#">Conditions d’utilisation</a> | <a href="#">Mentions légales</a></p>
-                <p>Contactez-nous : <a href="mailto:contact@sabifinances.fr">contact@sabifinances.fr</a> | Suivez-nous sur <a href="#">Twitter</a> | <a href="#">LinkedIn</a></p>
+                <p>Contactez-nous : <a href="mailto:jasonbateke@gmail.com">jasonbateke@gmail.com</a> | Suivez-nous sur <a href="#">Twitter</a> | <a href="#">LinkedIn</a></p>
                 <div class="ad-unit">
                     <ins class="adsbygoogle"
                          style="display:block"
-                         data-ad-client="ca-pub-6283676375456847"
+                         data-ad-client="ca-pub-7165340411035850"
                          data-ad-slot="9990001112"
                          data-ad-format="auto"
                          data-full-width-responsive="true"></ins>
